Agregado de info a BBDD

--- a/tp_final/home/templates/home/index.html
+++ b/tp_final/home/templates/home/index.html
@@ -108,12 +108,16 @@
                                 <h1> Acerca de mi:</h1>                         
                             </header>
                             <div class="w3-container", style="color:black(245, 245, 208)">
-                                <h6>Siempre me han interesado particularmente todo tema relacionado con la tecnologia y puntualmente todo lo que tiene que ver con los datos.</h6>
+                                <h6>Siempre me han interesado todo tema relacionado con la tecnologia, particularmente todo lo que tiene que ver con datos.</h6>
                                 <h6>Este curso de Python es el tercero que tomo en Coder House (anteriormente hice el de Tableau y Testing QA manual).
                                     Enfocandome siempre en los DATOS los proximos cursos a tomar seran de SQL, Data Analitics y Data Science.</h6>
-                                <h6>El presente blog es la entrega final del curso Python,donde utilizamos el Framework Django.
-                                    El mismo contiene informacion sobre una empresa distribuidora de alimentos. Las apps del blog son: Clientes - Productos - Limites de credito - Condiciones de pago.
-                                    En el trabajo se aplicacion los conocimientos adquiridos en el curso como: Programacion en Python, Utilizacion de formularios, CRUD, aplicacion de statics, herencias, clases, Login, logout, creacion de usuarios, utilizacion de avatars, unit tests, utilizacion de Git y Github etc. 
+                                <h6>El presente blog es la entrega final del curso Python,donde hemos utilizado el Framework Django.
+                                    En el trabajo se aplicacion los conocimientos adquiridos en el curso como: Programacion en Python, Modelo MVT de Django, Html, Utilizacion de formularios, CRUD, aplicacion de statics, herencias, clases, Login, logout, creacion de usuarios, utilizacion de avatars, unit tests, utilizacion de Git y Github etc.
+                                <h6>El mismo contiene informacion sobre una empresa distribuidora de alimentos. Las apps del blog son las siguientes:</h6> 
+                                <h6> * Clientes </h6>
+                                <h6> * Productos </h6>
+                                <h6> * Condiciones de pago </h6>
+                                <h6> * Limites de credito
                                 </h6>
                             </div>
                     </div>    
