Agregado de test case de Customer

--- a/tp_final/credit/templates/credit/credit_list.html
+++ b/tp_final/credit/templates/credit/credit_list.html
@@ -30,9 +30,9 @@ Credit list
                 <h5 class="post-subtitle"> Credito permitido ($): {{ credit.amount }}</h5>
             </a>    
             <p class="post-meta">
-                Creado por
-                <a href="#!">Start Bootstrap</a> 
-                en {{ credit.created_at }}
+                Creado 
+                <a href="#!"> </a> 
+                 {{ credit.created_at }}
             </p>
         </div>
         <!-- Divider-->
