--- a/tp_final/home/templates/home/index.html
+++ b/tp_final/home/templates/home/index.html
@@ -105,7 +105,7 @@
                     <div class="w3-container w3-round-large w3-padding-16 w3-margin-top w3-margin-bottom">
                         <div class="w3-card-4 w3-margin-top">
                             <header class="w3-container", style="color:black(245, 245, 208)">
-                                <h1> Acerca de mi:</h1>                         
+                                <h1> Acerca de mi:</h1>                                                       
                             </header>
                             <div class="w3-container", style="color:black(245, 245, 208)">
                                 <h6>Siempre me han interesado todo tema relacionado con la tecnologia, particularmente todo lo que tiene que ver con datos.</h6>
@@ -256,6 +256,38 @@
                                     </span>
                                 </a>
                             </li>
+                            <li class="list-inline-item">
+                                <a href="https://ar.linkedin.com/">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fas fa-circle fa-stack-2x"></i>
+                                        <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
+                                    </span>
+                                </a>
+                            </li>  
+                            <li class="list-inline-item">
+                                <a href="https://www.whatsapp.com/">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fas fa-circle fa-stack-2x"></i>
+                                        <i class="fab fa-whatsapp fa-stack-1x fa-inverse"></i>
+                                    </span>
+                                </a>
+                            </li> 
+                            <li class="list-inline-item">
+                                <a href="https://www.tiktok.com/es/">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fas fa-circle fa-stack-2x"></i>
+                                        <i class="fab fa-tiktok fa-stack-1x fa-inverse"></i>
+                                    </span>
+                                </a>
+                            </li> 
+                            <li class="list-inline-item">
+                                <a href="https://www.instagram.com/">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fas fa-circle fa-stack-2x"></i>
+                                        <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
+                                    </span>
+                                </a>
+                            </li>                                                                                                                   
                         </ul>
                         <div class="small text-center text-muted fst-italic">Copyright &copy; 2022 | Diego Muro | all rights reserved</div>
                     </div>
