--- a/tp_final/payment/templates/payment/payment_detail.html
+++ b/tp_final/payment/templates/payment/payment_detail.html
@@ -27,9 +27,9 @@ Payment detail
 <div class="post-preview">
     <h3 class="post-subtitle">Código: {{ payment.code }}</h3>
     <p class="post-meta">
-        Creado por
-        <a href="#!">Start Bootstrap</a> 
-        en {{ payment.created_at }}
+        Creado 
+        <a href="#!"> </a> 
+         {{ payment.created_at }}
         <br>
         Última fecha de actualización {{ payment.updated_at }}
     </p>
