--- a/tp_final/payment/templates/payment/payment_list.html
+++ b/tp_final/payment/templates/payment/payment_list.html
@@ -31,9 +31,9 @@ Payment list
                 <h5 class="post-subtitle">Dias permitidos: {{ payment.days }}</h5>
             </a>     
             <p class="post-meta">
-                Creado por
-                <a href="#!">Start Bootstrap</a> 
-                en {{ payment.created_at }}
+                Creado 
+                <a href="#!"> </a> 
+                 {{ payment.created_at }}
             </p>
         </div>
         <!-- Divider-->
