--- a/tp_final/product/templates/product/product_detail.html
+++ b/tp_final/product/templates/product/product_detail.html
@@ -27,9 +27,9 @@ Product detail
 <div class="post-preview">
     <h3 class="post-subtitle">Código: {{ product.code }}</h3>
     <p class="post-meta">
-        Creado por
-        <a href="#!">Start Bootstrap</a> 
-        en {{ product.created_at }}
+        Creado 
+        <a href="#!"> </a> 
+         {{ product.created_at }}
         <br>
         Última fecha de actualización {{ product.updated_at }}
     </p>
