--- a/tp_final/product/templates/product/product_list.html
+++ b/tp_final/product/templates/product/product_list.html
@@ -30,9 +30,9 @@ Product list
                 <h5 class="post-subtitle"> Unidades vendidas ultimo mes: {{ product.unit_sales }}</h5>
             </a>
             <p class="post-meta">
-                Creado por
-                <a href="#!">Start Bootstrap</a> 
-                en {{ product.created_at }}
+                Creado 
+                <a href="#!"> </a> 
+                 {{ product.created_at }}
             </p>
         </div>
         <!-- Divider-->
