--- a/tp_final/credit/templates/credit/credit_detail.html
+++ b/tp_final/credit/templates/credit/credit_detail.html
@@ -27,9 +27,9 @@ Credit detail
 <div class="post-preview">
     <h3 class="post-subtitle">Código: {{ credit.code }}</h3>
     <p class="post-meta">
-        Creado por
-        <a href="#!">Start Bootstrap</a> 
-        en {{ credit.created_at }}
+        Creado
+        <a href="#!"> </a> 
+         {{ credit.created_at }}
         <br>
         Última fecha de actualización {{ credit.updated_at }}
     </p>
