agregado de usuarios y avatars

--- a/tp_final/customer/templates/customer/customer_list.html
+++ b/tp_final/customer/templates/customer/customer_list.html
@@ -16,7 +16,7 @@ Customer list
                     </div>
                 </div>
             </div>
-            <a class="button_custom" href="{% url 'customer:customer-add' %}">Crear nuevo cliente</a>
+            <a class="button_custom text-white" href="{% url 'customer:customer-add' %}"><b>Crear nuevo cliente</b></a>
         </div>
     </header>
 {% endblock %}
