--- a/tp_final/home/templates/home/index.html
+++ b/tp_final/home/templates/home/index.html
@@ -61,7 +61,7 @@
                         <div class="site-heading">
                             {% if user.is_authenticated %}
                                 <h2>{{ user.first_name }} {{ user.last_name }}</h2>
-                                <h3>Bienvenido</h3>
+                                <h3>Bienvenido/a</h3>
                             {% else %}
                             <h2>Entrega Final - Diego Muro</h2>
                             <span class="subheading"> Coder House 2022 - Python</span>
@@ -108,7 +108,7 @@
                                 <h1> Acerca de mi:</h1>                                                       
                             </header>
                             <div class="w3-container", style="color:black(245, 245, 208)">
-                                <h6>Siempre me han interesado todo tema relacionado con la tecnologia, particularmente todo lo que tiene que ver con datos.</h6>
+                                <h6>Mi nombre es Diego Muro y siempre me han interesado todo tema relacionado con la tecnologia, particularmente todo lo que tiene que ver con datos.</h6>
                                 <h6>Este curso de Python es el tercero que tomo en Coder House (anteriormente hice el de Tableau y Testing QA manual).
                                     Enfocandome siempre en los DATOS los proximos cursos a tomar seran de SQL, Data Analitics y Data Science.</h6>
                                 <h6>El presente blog es la entrega final del curso Python,donde hemos utilizado el Framework Django.
