agregado de fotos de fondo

--- a/tp_final/customer/templates/customer/customer_list.html
+++ b/tp_final/customer/templates/customer/customer_list.html
@@ -6,7 +6,7 @@ Customer list
 {% endblock %}
 
 {% block tp_final_header %}
-    <header class="masthead" style="background-image: url('../../static/home/assets/img/header-light.jpg')">
+    <header class="masthead" style="background-image: url('../../static/home/assets/img/centro-comercial-carrefour-alcobendas-051.jpg')">
         <div class="container position-relative px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-15 col-lg-16 col-xl-14">
@@ -16,7 +16,7 @@ Customer list
                     </div>
                 </div>
             </div>
-            <a class="button_custom text-white" href="{% url 'customer:customer-add' %}"><b>Crear nuevo cliente</b></a>
+            <a class="button_custom text-yellow" href="{% url 'customer:customer-add' %}"><b>Crear nuevo cliente</b></a>
         </div>
     </header>
 {% endblock %}
