--- a/tp_final/home/templates/home/index.html
+++ b/tp_final/home/templates/home/index.html
@@ -54,7 +54,7 @@
         </nav>
         {% block tp_final_header %}
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('../../static/home/assets/img/mayoristaSlider.jpg')">
+        <header class="masthead" style="background-image: url('../../static/home/assets/img/europapress-2056354-supermercado-de-carrefour.jpeg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -110,14 +110,17 @@
                             <div class="w3-container", style="color:black(245, 245, 208)">
                                 <h6>Mi nombre es Diego Muro y siempre me han interesado todo tema relacionado con la tecnologia, particularmente todo lo que tiene que ver con datos.</h6>
                                 <h6>Este curso de Python es el tercero que tomo en Coder House (anteriormente hice el de Tableau y Testing QA manual).
-                                    Enfocandome siempre en los DATOS los proximos cursos a tomar seran de SQL, Data Analitics y Data Science.</h6>
-                                <h6>El presente blog es la entrega final del curso Python,donde hemos utilizado el Framework Django.
-                                    En el trabajo se aplicacion los conocimientos adquiridos en el curso como: Programacion en Python, Modelo MVT de Django, Html, Utilizacion de formularios, CRUD, aplicacion de statics, herencias, clases, Login, logout, creacion de usuarios, utilizacion de avatars, unit tests, utilizacion de Git y Github etc.
-                                <h6>El mismo contiene informacion sobre una empresa distribuidora de alimentos. Las apps del blog son las siguientes:</h6> 
+                                    Enfocandome siempre en los DATOS, los proximos cursos a tomar seran de SQL, Data Analitics y Data Science.</h6>
+                                <h6>El presente blog es la entrega final del curso Python, donde hemos utilizado el Framework Django.
+                                    En el trabajo se aplicaron los conocimientos adquiridos en el curso, entre otros: Programacion en Python, Modelo MVT de Django, Clases, Herencias, Html, Utilizacion de formularios, CRUD, aplicacion de statics, Login, logout, creacion de usuarios, utilizacion de avatars, unit tests, utilizacion de Git y Github etc.
+                                <h6>El mismo contiene informacion sobre una empresa distribuidora de alimentos de la Republica Argentina, la cual abastece grandes cadenas de supermercados y a mayoristas.</h6> 
+                                <h6>Las apps del blog son las siguientes:</h6>
+
+
                                 <h6> * Clientes </h6>
                                 <h6> * Productos </h6>
-                                <h6> * Condiciones de pago </h6>
-                                <h6> * Limites de credito
+                                <h6> * Limites de credito </h6>
+                                <h6> * Condiciones de pago
                                 </h6>
                             </div>
                     </div>    
