Mejora de index html en acerca de mi

--- a/tp_final/home/templates/home/index.html
+++ b/tp_final/home/templates/home/index.html
@@ -105,23 +105,34 @@
                     <div class="w3-container w3-round-large w3-padding-16 w3-margin-top w3-margin-bottom">
                         <div class="w3-card-4 w3-margin-top">
                             <header class="w3-container", style="color:black(245, 245, 208)">
-                                <h1> Acerca de mi:</h1>                                                       
+                                <h2> Acerca de mi:</h2>
+                                                                                  
                             </header>
                             <div class="w3-container", style="color:black(245, 245, 208)">
-                                <h6>Mi nombre es Diego Muro y siempre me han interesado todo tema relacionado con la tecnologia, particularmente todo lo que tiene que ver con datos.</h6>
-                                <h6>Este curso de Python es el tercero que tomo en Coder House (anteriormente hice el de Tableau y Testing QA manual).
-                                    Enfocandome siempre en los DATOS, los proximos cursos a tomar seran de SQL, Data Analitics y Data Science.</h6>
-                                <h6>El presente blog es la entrega final del curso Python, donde hemos utilizado el Framework Django.
-                                    En el trabajo se aplicaron los conocimientos adquiridos en el curso, entre otros: Programacion en Python, Modelo MVT de Django, Clases, Herencias, Html, Utilizacion de formularios, CRUD, aplicacion de statics, Login, logout, creacion de usuarios, utilizacion de avatars, unit tests, utilizacion de Git y Github etc.
-                                <h6>El mismo contiene informacion sobre una empresa distribuidora de alimentos de la Republica Argentina, la cual abastece grandes cadenas de supermercados y a mayoristas.</h6> 
-                                <h6>Las apps del blog son las siguientes:</h6>
-
-
-                                <h6> * Clientes </h6>
-                                <h6> * Productos </h6>
-                                <h6> * Limites de credito </h6>
-                                <h6> * Condiciones de pago
-                                </h6>
+                                
+                                <p>Mi nombre es Diego Muro y siempre me ha interesado todo tema relacionado con la tecnologia, particularmente todo lo que tenga que ver con datos y el manejo de estadisticas y tableros de control.
+                                <br>
+                                <br>
+                                Este curso de Python es el tercero que tomo en Coder House (anteriormente hice el de Tableau y Testing QA manual).
+                                Enfocandome siempre en los DATOS, los proximos cursos a tomar seran de SQL, Data Analytics y Data Science.
+                                <br>
+                                <br>
+                                El presente blog es la <strong>Entrega final del curso de Python - Comision 43765</strong>, donde hemos utilizado el Framework Django.
+                                En el trabajo se aplicaron los conocimientos adquiridos en el curso, entre otros: Programacion en Python, Modelo MVT de Django, Clases, Herencias, HTML5, CSS, Utilizacion de formularios, CRUD, aplicacion de statics, Login, Logout, creacion de usuarios, utilizacion de avatars, unit tests, utilizacion de Git y Github, etc.
+                                <br>
+                                El mismo contiene informacion sobre una empresa distribuidora de alimentos de la Republica Argentina, la cual abastece a grandes cadenas de supermercados y a mayoristas. 
+                                Las apps del blog son las siguientes:
+                                <br>
+                                <br>
+                                <strong>*  Clientes</strong>
+                                <br> 
+                                <strong>*  Productos</strong>
+                                <br>
+                                <strong>*  Limites de credito</strong>
+                                <br>
+                                <strong>*  Condiciones de pago</strong>
+                                </p>
+                            </p>     
                             </div>
                     </div>    
                     <!-- Divider-->
