--- a/tp_final/home/templates/home/index.html
+++ b/tp_final/home/templates/home/index.html
@@ -22,7 +22,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'home/css/styles.css' %}" rel="stylesheet" />
     </head>
-    <body>
+    <body style="background-image: url('../../static/home/assets/img/header-light.jpg')">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light topbar" id="mainNav">
             <div class="container px-4 px-lg-5">
