agregado de links de video al readme

--- a/tp_final/home/templates/home/index.html
+++ b/tp_final/home/templates/home/index.html
@@ -200,7 +200,7 @@
                                  <h5 class="post-subtitle">Unidades vendidas ultimo mes: {{ product.unit_sales }}</h5>
                             </a>     
                             <p class="post-meta">
-                                Creado por
+                                Creado
                                 <span style="color: #0b4956;" href="">{{ product.owner.username }}</span>
                                 ( {{ product.created_at }} )
                             </p>
